Fixed scrolling on mobile

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -29,4 +29,7 @@ body {
 
 html {
    scroll-behavior: smooth;
+   @media screen and (max-width: 50em) {
+      overflow-x: hidden;
+   }
 }
