--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -1,6 +1,8 @@
 body {
    background: $color__background-body; // Fallback for when there is no custom background color defined.
    font-family: $my_font_02;
+   overflow-x: hidden;
+
    @media screen and (min-width: 50em) {
       overflow-y: visible !important;
    }
