--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -5,34 +5,37 @@
 */
 
 // Splash
-
 article.splash-container {
    width: 100%;
-   @media screen and (min-width: 50em) {
-      height: 85vh;
-      min-height: 85vh;
-   }
+   height: auto;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: flex-start;
    @media screen and (min-width: 60em) {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      margin-bottom: -10px;
    }
 
    // Banner
    section.splash-container__banner {
       width: 100%;
+      height: 300px;
+      @media screen and (min-width: 25em) {
+         height: 425px;
+      }
+      @media screen and (min-width: 60em) {
+         height: 85vh;
+         min-height: 600px;
+      }
+
       img {
          width: 100%;
-         height: 300px;
+         height: inherit;
          object-fit: cover;
          filter: grayscale(100%) contrast(1.25);
-         @media screen and (min-width: 25em) {
-            height: 500px;
-         }
-         @media screen and (min-width: 50em) {
-            height: 85vh;
-            width: 100%;
-            padding: 0px;
+         @media screen and (min-width: 60em) {
+            min-height: 600px;
          }
       }
    }
@@ -40,6 +43,8 @@ article.splash-container {
    // Text Content
    section.text-content {
       padding: 50px 35px;
+      max-width: 600px;
+      margin: auto;
       h1 {
          text-transform: lowercase;
          font-size: 1.75em;
@@ -52,12 +57,18 @@ article.splash-container {
          flex-direction: column;
          align-items: flex-start;
          justify-content: center;
+         padding: 125px 0px;
       }
       @media screen and (min-width: 60em) {
          padding: 0% 20%;
+         height: 100%;
+         max-height: 85vh;
+         max-width: none;
+         width: 100%;
+         min-height: 500px;
       }
    }
-}
+} // end of splash container
 
 // Categories
 article.category-items {
@@ -110,6 +121,8 @@ article.about-excerpt {
    flex-direction: column;
    justify-content: center;
    align-items: center;
+   max-width: 600px;
+   margin: auto;
    h2 {
       font-size: 1.5em;
       @media screen and (min-width: 50em) {
@@ -118,9 +131,13 @@ article.about-excerpt {
    }
    @media screen and (min-width: 50em) {
       text-align: center;
-      height: 75vh;
-      min-height: 500px;
       @include center-items--col;
+      min-height: 600px;
+   }
+   @media screen and (min-width: 60em) {
+      max-width: none;
+      margin: 0px;
+      padding: 0px 75px;
    }
 }
 
